// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell CellGroup title slot 1`] = `<div class="o-cell-group o-hairline--top-bottom"></div>`;

exports[`Cell arrow direction 1`] = `<div class="o-cell o-cell--clickable"><i class="o-cell__right-icon">test-file-stub</i></div>`;

exports[`Cell render slot 1`] = `
<div class="o-cell">
  <div class="o-cell__title">Custom Title<div class="o-cell__label">Custom Label</div>
  </div>
  <div class="o-cell__value">Custom Icon</div>
</div>
`;

exports[`Cell title prop 1`] = `
<div class="o-cell">
  <div class="o-cell__title"><span>title</span></div>
</div>
`;
